src/app/components/Desktop/style.scss
#desktop {
  font-family: 'Rubik', sans-serif;
  @function gray($color) {
    @return rgb($color, $color, $color);
  }
  
  $red: rgb(239, 83, 80);
  $orange: rgb(255, 160, 0);
  $yellow: rgb(253, 216, 53);
  $green: rgb(42, 252, 152);
  $indigo: rgb(57, 73, 171);
  $violet: rgb(103, 58, 183);
  $blue: rgb(66, 165, 245);
  $backgroundImage: 'https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80';

  @keyframes blink {
    from,
    25%,
    to {
      opacity: 1;
    }

    50% {
      opacity: 0;
    }
  }

  @keyframes spin {
    from {
      transform: rotate(0deg);
    }

    50% {
      transform: rotate(720deg);
    }

    to {
      transform: rotate(1440deg);
    }
  }

  @keyframes bounce {
    from,
    6.66%,
    17.66%,
    33.33% {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
      transform: translate3d(0, 0, 0);
    }

    13.33%,
    14.33% {
      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
      transform: translate3d(0, -30px, 0) scaleY(1.1);
    }

    23.33% {
      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
      transform: translate3d(0, -15px, 0) scaleY(1.05);
    }

    26.66% {
      transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
      transform: translate3d(0, 0, 0) scaleY(0.95);
    }

    30% {
      transform: translate3d(0, -4px, 0) scaleY(1.02);
    }
  }

  background-color: gray(30);

  /* STATUS */

  &.logged-out {
    #desktop-info {
      margin-left: 2rem;
      opacity: 1;
      transform: translateX(0%);
    }

    #desktop-background {
      cursor: pointer;
    }

    #sign-in-button-wrapper {
      opacity: 1;
      pointer-events: all;
      transform: translate(-2rem, 0px);
    }
  }

  &.logging-in,
  &.verifying-log-in,
  &.log-in-error {
    #desktop-background {
      #desktop-background-image {
        transform: scale(1.2);
        // filter: blur(1rem);
        position: relative;
        &::after{
          content: "";
          position: absolute;
          width: 100%;
          height: 100%;
          backdrop-filter: blur(10px); /* apply the blur */
          pointer-events: none; /* make the overlay click-through */
        }
      }
    }
  }

  &.logging-in,
  &.log-in-error {
    #desktop-pin-wrapper {
      opacity: 1;
      pointer-events: all;
      transform: translate(-50%, -50%) scale(1);
    }
  }

  &.verifying-log-in {
    #desktop-loading-icon {
      opacity: 1;
      transform: translate(-50%, -50%);
    }
  }

  &.log-in-error {
    #desktop-pin-wrapper {
      #desktop-pin {
        .desktop-pin-digit {
          background-color: rgba($red, 0.05);
          border-color: rgba($red, 0.5);
        }
      }
    }
  }

  &.logged-in {
    #desktop-main {
      height: auto;
      overflow: initial;
      opacity: 1;
      pointer-events: all;
      transform: translateY(0%);
    }
  }

  /* BACKGROUND */

  #desktop-background {
    height: 100%;
    left: 0px;
    overflow: hidden;
    position: fixed;
    top: 0px;
    width: 100%;
    z-index: 1;
    #desktop-background-image {
      background-image: url($backgroundImage);
      // background-image: url('https://static.scientificamerican.com/sciam/cache/file/B057439A-3F27-48F0-8EA54AF511520AAB_source.jpg');
      background-image: url('https://img.freepik.com/free-vector/color-seamless-space-pattern_102902-2360.jpg?w=996&t=st=1659728072~exp=1659728672~hmac=b02b9b56ac3bd83c9013e48019fa3162f5672a5b31a50901807281fb93c56fa6');
      // background-image: url('https://img.freepik.com/free-vector/telescope-science-discovery-watching-stars-planets-outer-space_107791-4920.jpg?w=1480&t=st=1659728510~exp=1659729110~hmac=308d038e0517da3734673fb789f904bb00c7ef6a630c41217596a7e63e4c7b47');
      // background-image: url('https://img.freepik.com/free-vector/astronaut-walking-moon_603843-760.jpg?w=740&t=st=1659728734~exp=1659729334~hmac=d2f5ea52e450a264cf369621d37ab58d39e8b541a1caaea61c91089e446f67cf');
      height: 100%;
      transition: filter 250ms, transform 250ms;
      width: 100%;
      background-position: center;
      background-repeat: no-repeat;
      background-size: cover;
      &::after{
        content: "";
        position: absolute;
        width: 100%;
        height: 100%;
        backdrop-filter: blur(10px); /* apply the blur */
        pointer-events: none; /* make the overlay click-through */
      }
    }
  }

  /* INFO */


  #desktop-info {
    bottom: 0px;
    left: 0px;
    margin: 40px;
    margin-left: 0px;
    opacity: 0;
    position: absolute;
    transform: translateX(-100%);
    transition: margin 250ms, opacity 250ms, transform 250ms;
    z-index: 2;
  }
  .info {
    align-items: flex-end;
    display: flex;

    .time {
      color: gray(245);
      font-size: 6em;
      height: 80px;
      line-height: 80px;
      text-shadow: 2px 2px 2px rgba(black, 0.1);
    }

    .weather {
      display: inline-flex;
      height: 20px;
      margin-bottom: 6px;
      margin-left: 20px;

      i,
      span {
        align-items: center;
        display: inline-flex;
      }

      i {
        color: $yellow;
        font-size: 0.9em;
      }

      span {
        color: white;
      }

      .weather-type {
        height: 20px;
      }

      .weather-temperature-value {
        font-size: 1.5em;
        height: 20px;
        margin-left: 5px;
      }

      .weather-temperature-unit {
        align-items: flex-start;
        font-size: 0.8em;
        margin-left: 3px;
      }
    }
  }

  /* PIN */

  #desktop-pin-wrapper {
    left: 50%;
    opacity: 0;
    pointer-events: none;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -30%) scale(0.8);
    transition: opacity 250ms, transform 250ms;
    z-index: 2;

    #desktop-pin-label {
      color: gray(245);
      font-size: 0.9em;
      margin: 10px;
      text-shadow: 2px 2px 2px rgba(black, 0.1);

      #desktop-pin-cancel-text {
        cursor: pointer;
        margin-left: 2px;

        &:hover {
          text-decoration: underline;
        }
      }

      #desktop-pin-error-text {
        color: $red;
      }
    }

    #desktop-pin-hidden-input {
      background-color: transparent;
      border: none;
      height: 0px;
      outline: none;
      pointer-events: none;
      position: absolute;
      width: 0px;
    }

    #desktop-pin {
      display: flex;
      gap: 10px;

      .desktop-pin-digit {
        align-items: center;
        background-color: rgba(white, 0.05);
        border: 1px solid rgba(white, 0.2);
        border-radius: 10px;
        box-shadow: 2px 2px 2px rgba(black, 0.06);
        display: inline-flex;
        font-size: 3em;
        height: 80px;
        justify-content: center;
        position: relative;
        transition: background-color 250ms, border-color 250ms;
        width: 60px;

        &:after,
        &:before {
          box-shadow: 2px 2px 2px rgba(black, 0.06);
          content: '';
          position: absolute;
          transition: opacity 250ms, transform 250ms;
          z-index: 2;
        }

        &:before {
          background-color: gray(245);
          border-radius: 10px;
          bottom: 0px;
          height: 3px;
          left: 15%;
          opacity: 0;
          transform: translateY(0px);
          width: 70%;
        }

        &:after {
          background-color: gray(245);
          border-radius: 20px;
          height: 20px;
          opacity: 0;
          transform: scale(0.25);
          width: 20px;
        }

        &.focused {
          &:before {
            animation: blink 2s ease-in-out infinite;
            opacity: 1;
            transform: translateY(-10px);
          }
        }

        &.hidden {
          &:after {
            opacity: 1;
            transform: scale(1);
          }

          .desktop-pin-digit-value {
            opacity: 0;
            transform: scale(0.25);
          }
        }

        .desktop-pin-digit-value {
          color: gray(245);
          transition: opacity 250ms, transform 250ms;
        }
      }
    }
  }

  /* User Status */

  #sign-in-button-wrapper {
    opacity: 0;
    pointer-events: none;
    position: absolute;
    transition: opacity 250ms, transform 250ms;
    z-index: 2;
    bottom: 40px;
    left: auto;
    right: 0px;
    #sign-in-button {
      &:not(:hover) {
        animation: bounce 3s infinite;
        animation-delay: 3s;
      }
    }
  }

  .user-status-button {
    cursor: pointer;
    margin-top: 10px;
    outline: none;
    padding: 10px;
    width: 100px;

    i {
      color: gray(245);
      font-size: 1.25em;
    }
  }

  .clear-button {
    backdrop-filter: blur(3px);
    background-color: rgba(white, 0.1);
    border: 1px solid rgba(white, 0.1);
    border-radius: 100px;
    box-shadow: 2px 2px 2px rgba(black, 0.1);
    cursor: pointer;

    &:hover {
      background-color: rgba(white, 0.2);
      border: 1px solid rgba(white, 0.3);
    }
  }

  /* Desktop Loading */

  #desktop-loading-icon {
    left: 50%;
    opacity: 0;
    pointer-events: none;
    position: absolute;
    top: 50%;
    transform: translate(-50%, 0%);
    transition: opacity 250ms, transform 250ms;
    z-index: 2;

    i {
      animation: 2s spin ease-in-out infinite;
      color: white;
      font-size: 2em;
    }
  }

  /* Desktop Main*/

  #desktop-main {
    height: 100vh;
    width: 100%;
    overflow: hidden;
    opacity: 0;
    pointer-events: none;
    position: relative;
    transform: translateY(-10%);
    transition: opacity 250ms, transform 250ms;
    z-index: 2;

    #desktop-main-content-wrapper {
      // background: linear-gradient(to bottom, transparent, gray(30));
      min-height: 100vh;
      padding: 2rem 2rem;

      #desktop-main-content {
        margin: auto;
        max-width: 1600px;
        position: relative;

        #desktop-main-content-header {
          display: flex;
          justify-content: space-between;
        }
      }
    }
  }

  /* Quick Nav */

  #quick-nav {
    display: flex;
    gap: 10px;
    margin-top: 20px;
    overflow: auto;
    padding-bottom: 5px;
    width: 100%;
    z-index: 3;

    .quick-nav-item {
      padding: 10px 20px;

      &:last-of-type {
        margin-right: 10px;
      }

      .quick-nav-item-label {
        color: gray(245);
        text-shadow: 0px 0px 2px rgba(black, 0.1);
      }
    }
  }

  /* Scrollable */

  .scrollable-component {
    cursor: grab;
    overflow: auto;
    user-select: none;
    width: 100%;

    &:active {
      cursor: grabbing;
    }

    &::-webkit-scrollbar {
      height: 0px;
      width: 0px;
    }
  }
}




@media (max-width: 1300px) {
  #desktop {
    &.logged-out {
      #sign-in-button-wrapper {
        transform: translate(-2rem, 0px);
      }
    }

    #sign-in-button-wrapper {
      bottom: 40px;
      left: auto;
      right: 0px;
      transform: translate(40px, 0px);
    }

    #desktop-main {
      #desktop-main-content-wrapper {
        padding: 2rem;
      }
    }
  }
}

@media (max-width: 600px) {
  #desktop {
    .info {
      .time {
        font-size: 4em;
        height: 60px;
        line-height: 60px;
      }
    }

    .user-status-button {
      width: 60px;
      fill: inherit;
    }

    #desktop-main {
      #desktop-main-content-wrapper {
        padding: 2rem 1rem;
      }
    }
  }
}

@media (max-width: 400px) {
  #desktop {
    #desktop-main {
      #desktop-main-content-wrapper {
        padding: 0.5rem;
      }
    }
  }
}

